CoqOfSolidity/test/libsolidity/syntaxTests/errors/basic.v
(* Generated by coq-of-solidity *)
Require CoqOfSolidity.CoqOfSolidity.

(* Contract *)
Module C.
  (* Error MyError *)

  (* Error MyError2 *)

  (* Error MyError3 *)
End C.
